--- a/research.html
+++ b/research.html
@@ -29,15 +29,15 @@
 </li>
 </ul>
 <ul>
-<li><p> <b>Feng, L.</b>&#8224 and <b>Yang, G.</b>* (2024). "Deep Kronecker Network", Biometrika, 111(2): 707-714. [<a href="https://academic.oup.com/biomet/advance-article-abstract/doi/10.1093/biomet/asad049/7257066?redirectedFrom=fulltext">link</a>][<a href="https://arxiv.org/abs/2210.13327">arXiv</a>]. </p>
+<li><p> <b>Feng, L.</b><sup>&#8224</sup> and <b>Yang, G.</b>* (2024). "Deep Kronecker Network", Biometrika, 111(2): 707-714. [<a href="https://academic.oup.com/biomet/advance-article-abstract/doi/10.1093/biomet/asad049/7257066?redirectedFrom=fulltext">link</a>][<a href="https://arxiv.org/abs/2210.13327">arXiv</a>]. </p>
 </li>
 </ul>
  <ul>
-<li><p><b>Wu, S.</b>* and <b>Feng, L.</b> (2023). "Sparse Kronecker Product Decomposition: A General Framework of Signal Region Detection in Image Regression", Journal of Royal Statistical Society, series B (JRSSB), 85(3): 783-809. [<a href="https://academic.oup.com/jrsssb/advance-article/doi/10.1093/jrsssb/qkad024/7145706">link</a>][<a href="https://arxiv.org/abs/2210.09128">arXiv</a>].</p>
+<li><p><b>Wu, S.</b>* and <b>Feng, L.</b><sup>&#8224</sup> (2023). "Sparse Kronecker Product Decomposition: A General Framework of Signal Region Detection in Image Regression", Journal of Royal Statistical Society, series B (JRSSB), 85(3): 783-809. [<a href="https://academic.oup.com/jrsssb/advance-article/doi/10.1093/jrsssb/qkad024/7145706">link</a>][<a href="https://arxiv.org/abs/2210.09128">arXiv</a>].</p>
 </li>
 </ul>
 <ul>
-<li><p><b>Feng, L.</b>  and  Wang, J. (2022). "Projected Robust PCA with Application to Smooth Image Recovery
+<li><p><b>Feng, L.</b><sup>&#8224</sup>  and  Wang, J. (2022). "Projected Robust PCA with Application to Smooth Image Recovery
 ", Journal of Machine Learning Research (JMLR), 23(249): 1-41. [<a href="https://jmlr.org/papers/v23/21-0347.html">link</a>][<a href="https://arxiv.org/abs/2009.05478">arXiv</a>].</p>
 </li>
 </ul>
