--- a/research.html
+++ b/research.html
@@ -21,7 +21,7 @@
 <div id="toptitle">
 <h1>Publications and Preprints</h1>
 </div>
-<p>* stands for PhD students. &nbsp   &#8224 stands for corresponding author. &nbsp # stands for alphabetical authorship. </p>
+<p>* PhD students. &nbsp   &#8224 corresponding author. &nbsp # alphabetical authorship. </p>
 <div class="infoblock">
 <div class="blockcontent">
 <ul>
