--- a/research.html
+++ b/research.html
@@ -25,15 +25,15 @@
 <div class="infoblock">
 <div class="blockcontent">
 <ul>
-<li><p> <b>Su, S.</b>*, <b>Li, Z.</b>*, <b>Feng, L.</b><sup>&#8224</sup> and Li, T. (2024+). "A General Framework of Brain Region Detection and Genetic Variants Selection in Imaging Genetics", Annals of Applied Statistics (AoAS), invited revision. </p>
+<li><p> <b>Su, S.</b> <sup>*</sup>, <b>Li, Z.</b><sup>*</sup>, <b>Feng, L.</b><sup>&#8224</sup> and Li, T. (2024+). "A General Framework of Brain Region Detection and Genetic Variants Selection in Imaging Genetics", Annals of Applied Statistics (AoAS), invited revision. </p>
 </li>
 </ul>
 <ul>
-<li><p> <b>Feng, L.</b><sup>&#8224</sup> and <b>Yang, G.</b>* (2024). "Deep Kronecker Network", Biometrika, 111(2): 707-714. [<a href="https://academic.oup.com/biomet/advance-article-abstract/doi/10.1093/biomet/asad049/7257066?redirectedFrom=fulltext">link</a>][<a href="https://arxiv.org/abs/2210.13327">arXiv</a>]. </p>
+<li><p> <b>Feng, L.</b><sup>&#8224</sup> and <b>Yang, G.</b><sup>*</sup> (2024). "Deep Kronecker Network", Biometrika, 111(2): 707-714. [<a href="https://academic.oup.com/biomet/advance-article-abstract/doi/10.1093/biomet/asad049/7257066?redirectedFrom=fulltext">link</a>][<a href="https://arxiv.org/abs/2210.13327">arXiv</a>]. </p>
 </li>
 </ul>
  <ul>
-<li><p><b>Wu, S.</b>* and <b>Feng, L.</b><sup>&#8224</sup> (2023). "Sparse Kronecker Product Decomposition: A General Framework of Signal Region Detection in Image Regression", Journal of Royal Statistical Society, series B (JRSSB), 85(3): 783-809. [<a href="https://academic.oup.com/jrsssb/advance-article/doi/10.1093/jrsssb/qkad024/7145706">link</a>][<a href="https://arxiv.org/abs/2210.09128">arXiv</a>].</p>
+<li><p><b>Wu, S.</b><sup>*</sup> and <b>Feng, L.</b><sup>&#8224</sup> (2023). "Sparse Kronecker Product Decomposition: A General Framework of Signal Region Detection in Image Regression", Journal of Royal Statistical Society, series B (JRSSB), 85(3): 783-809. [<a href="https://academic.oup.com/jrsssb/advance-article/doi/10.1093/jrsssb/qkad024/7145706">link</a>][<a href="https://arxiv.org/abs/2210.09128">arXiv</a>].</p>
 </li>
 </ul>
 <ul>
