--- a/research.html
+++ b/research.html
@@ -25,6 +25,10 @@
 <div class="infoblock">
 <div class="blockcontent">
 <ul>
+<li><p> <b>Li, Z.</b><sup>*</sup>, <b>Wu, S.</b> <sup>*</sup> and <b>Feng, L.</b><sup>&#8224</sup> (2024). "Time Series Generative Learning with Application to Brain Imaging Analysis", under review. [<a href="https://arxiv.org/abs/2407.14003">arXiv</a>]. </p>
+</li>
+</ul>
+<ul>
 <li><p> <b>Su, S.</b> <sup>*</sup>, <b>Li, Z.</b><sup>*</sup>, <b>Feng, L.</b><sup>&#8224</sup> and Li, T. (2024+). "A General Framework of Brain Region Detection and Genetic Variants Selection in Imaging Genetics", Annals of Applied Statistics (AoAS), invited revision. </p>
 </li>
 </ul>
