--- a/research.html
+++ b/research.html
@@ -19,7 +19,7 @@
 </td>
 <td id="layout-content">
 <div id="toptitle">
-<h1>Publications and Preprints</h1>
+<h1>Publications and Preprints (selected) </h1>
 </div>
 <p>* PhD students. &nbsp   &#8224 corresponding author. &nbsp # alphabetical authorship. </p>
 <div class="infoblock">
