--- a/people.html
+++ b/people.html
@@ -19,9 +19,13 @@
 </td>
 <td id="layout-content">
 <div id="toptitle">
-<h1>PhD Students</h1>
+<h1>People</h1>
 </div>
+<h2>PhD Student</h2>
 <p>WU, Sanyou (2020-Present; BS, Tongji U; MS, SUFE) <br /> YANG, Guang (2020-Present; BS, Renmin U) <br /> Li, Zhenghao (2022-Present; BS, PKU)<br /> Su, Siqiang (2022-Present; BS, PolyU; MS, Yale)</p>
+<p>I am currently lookingly for PhD students and Postdocs. Welcome to drop me an email if interested. Due to the substantial amount of emails being received, I may not be able to reply to each of them. However, I do read every applicant's email. Please do not be offended if I do not reply.</p>
+<h2>Postdoc</h2>
+<p>He, Shuaida (2024-Present; PhD, SusTech) <br /> Tian, Ye (2024-Present; PhD, Rutgers) <br /> </p>
 </td>
 </tr>
 </table>
