--- a/teaching.html
+++ b/teaching.html
@@ -24,9 +24,8 @@
 <div class="infoblock">
 <div class="blockcontent">
 <ul>
-<li>
-<p>STAT 3622&ndash;Data Visualization, Spring 2023, 2024, [<a href="https://webapp.science.hku.hk/sr4/servlet/enquiry?Type=Course&course_code=STAT3622">website</a>]</p>
-<p>STAT 3622&ndash;Data Visualization, Spring 2023, 2024, [<a href="https://webapp.science.hku.hk/sr4/servlet/enquiry?Type=Course&course_code=STAT3622">website</a>]</p>
+<li><p>STAT 3622&ndash;Data Visualization, Spring 2023, 2024, [<a href="https://webapp.science.hku.hk/sr4/servlet/enquiry?Type=Course&course_code=STAT3622">website</a>]</p>
+<li><p>STAT 26022&ndash; Probability and Statistics II, Fall 2024, [<a href="https://webapp.science.hku.hk/sr4/servlet/enquiry?Type=Course&course_code=STAT2602">website</a>]</p>
 </li>
 </ul>
 </td>
