--- a/people.html
+++ b/people.html
@@ -22,7 +22,7 @@
 <h1>People</h1>
 </div>
 <h2>PhD Student</h2>
-<p>WU, Sanyou (2020-Present; BS, Tongji U; MS, SUFE) <br /> YANG, Guang (2020-Present; BS, Renmin U) <br /> Li, Zhenghao (2022-Present; BS, PKU)<br /> Su, Siqiang (2022-Present; BS, PolyU; MS, Yale)</p>
+<p>WU, Sanyou (2020-Present; BS, Tongji U; MS, SUFE) <br /> YANG, Guang (2020-Present; BS, Renmin U) <br /> Li, Zhenghao (2022-Present; BS, PKU)<br /> Su, Siqiang (2022-Present; BS, PolyU; MS, Yale)<br /> Chong, Kwong Yu (2024-Present; BS, CUHK; MS, Duke)<br /> Du, Junye (2024-Present; BS, CityU)<br /> Ding, Qilong (2024-Present; BS, Tsinghua; MS, Fudan)</p>
 <h2>Postdoc</h2>
 <p>He, Shuaida (2024-Present; PhD, SusTech) <br /> Tian, Ye (2024-Present; PhD, Rutgers) <br /> </p>
 </td>
