--- a/research.html
+++ b/research.html
@@ -33,6 +33,10 @@
 </li>
 </ul>
 <ul>
+<li><p> <b>Yang, G.</b> <sup>*</sup>, <b>Feng, L.</b><sup>&#8224</sup> and Cao, Y. (2024). "Attention boosted Individualized Regression", Neural Information Processing Systems (NeurIPS). </p>
+</li>
+</ul>
+<ul>
 <li><p> <b>Feng, L.</b><sup>&#8224</sup> and <b>Yang, G.</b><sup>*</sup> (2024). "Deep Kronecker Network", Biometrika, 111(2): 707-714. [<a href="https://academic.oup.com/biomet/advance-article-abstract/doi/10.1093/biomet/asad049/7257066?redirectedFrom=fulltext">link</a>][<a href="https://arxiv.org/abs/2210.13327">arXiv</a>]. </p>
 </li>
 </ul>
