--- a/research.html
+++ b/research.html
@@ -33,7 +33,7 @@
 </li>
 </ul>
 <ul>
-<li><p> <b>Yang, G.</b> <sup>*</sup>, <b>Feng, L.</b><sup>&#8224</sup> and Cao, Y. (2024). "Attention boosted Individualized Regression", Neural Information Processing Systems (NeurIPS). </p>
+<li><p> <b>Yang, G.</b> <sup>*</sup>, Cao, Y., and <b>Feng, L.</b><sup>&#8224</sup> (2024). "Attention boosted Individualized Regression", Neural Information Processing Systems (NeurIPS). </p>
 </li>
 </ul>
 <ul>
