--- a/research.html
+++ b/research.html
@@ -29,11 +29,11 @@
 </li>
 </ul>
 <ul>
-<li><p> <b>Su, S.</b> <sup>*</sup>, <b>Li, Z.</b><sup>*</sup>, <b>Feng, L.</b><sup>&#8224</sup> and Li, T. (2024+). "A General Framework of Brain Region Detection and Genetic Variants Selection in Imaging Genetics", Annals of Applied Statistics (AoAS), accepted. </p>
+<li><p> <b>Su, S.</b> <sup>*</sup>, <b>Li, Z.</b><sup>*</sup>, <b>Feng, L.</b><sup>&#8224</sup> and Li, T. (2024). "A General Framework of Brain Region Detection and Genetic Variants Selection in Imaging Genetics", Annals of Applied Statistics (AoAS), accepted. </p>
 </li>
 </ul>
 <ul>
-<li><p> <b>Yang, G.</b> <sup>*</sup>, Cao, Y., and <b>Feng, L.</b><sup>&#8224</sup> (2024). "Attention boosted Individualized Regression", Neural Information Processing Systems (NeurIPS). </p>
+<li><p> <b>Yang, G.</b> <sup>*</sup>, Cao, Y. and <b>Feng, L.</b><sup>&#8224</sup> (2024). "Attention boosted Individualized Regression", Neural Information Processing Systems (NeurIPS). </p>
 </li>
 </ul>
 <ul>
