--- a/research.html
+++ b/research.html
@@ -29,7 +29,7 @@
 </li>
 </ul>
 <ul>
-<li><p> <b>Su, S.</b> <sup>*</sup>, <b>Li, Z.</b><sup>*</sup>, <b>Feng, L.</b><sup>&#8224</sup> and Li, T. (2024). "A General Framework of Brain Region Detection and Genetic Variants Selection in Imaging Genetics", Annals of Applied Statistics (AoAS), accepted. </p>
+<li><p> <b>Su, S.</b> <sup>*</sup>, <b>Li, Z.</b><sup>*</sup>, <b>Feng, L.</b><sup>&#8224</sup> and Li, T. (2024). "A General Framework of Brain Region Detection and Genetic Variants Selection in Imaging Genetics", Annals of Applied Statistics (AoAS), accepted, [<a href="http://arxiv.org/abs/2412.19735">arXiv</a>] </p>
 </li>
 </ul>
 <ul>
