--- a/research.html
+++ b/research.html
@@ -33,7 +33,7 @@
 </li>
 </ul>
 <ul>
-<li><p> <b>Yang, G.</b> <sup>*</sup>, Cao, Y. and <b>Feng, L.</b><sup>&#8224</sup> (2024). "Attention boosted Individualized Regression", Neural Information Processing Systems (NeurIPS). </p>
+<li><p> <b>Yang, G.</b> <sup>*</sup>, Cao, Y. and <b>Feng, L.</b><sup>&#8224</sup> (2024). "Attention boosted Individualized Regression", Neural Information Processing Systems (NeurIPS).  [<a href="https://openreview.net/forum?id=9xoFciqYIU&referrer=%5Bthe%20profile%20of%20Yuan%20Cao%5D(%2Fprofile%3Fid%3D~Yuan_Cao1)">link</a>].</p>
 </li>
 </ul>
 <ul>
