--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <img src="bio.jpeg" alt="alt text" width="170px" height="170px" />&nbsp;</td>
 <td align="left"><p>Assistant Professor <br /> 
 Department of Statistics and Actuarial Science <br />
+School of Computing and Data Science <br />
 University of Hong Kong<br />
 Email: lfeng@hku.hk</p>
 </td></tr></table>
